refactored fuegeKlausurHinzu in aggregateroot student